objects/AIA_Benefits__c.object
<CustomObject>
    <fields>
        <fullName>OON_Cost_Share_Customized__c</fullName>
        <formula>if(OON_Cost_Share_Default_Amount__c!= null &amp;&amp; OON_Cost_Share_SelectedAmount__c!= OON_Cost_Share_Default_Amount__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Cost Share - Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Cost_Share_Default_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON - Cost Share - Default Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Cost_Share_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Cost Share High</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Cost_Share_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Cost Share Increment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Cost_Share_InvalidIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Cost Share InvalidIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Cost_Share_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Cost Share Low</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Cost_Share_SelectedAmount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>OON - Cost Share - SelectedAmount</inlineHelpText>
        <label>OON Cost Share</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Custom_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OON Custom Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_DA_Drawloop__c</fullName>
        <formula>IF(TEXT(OON_Copay_Type_1_IsCovered__c)='Yes',IF( OON_Discount_Amount__c !='','Discount Amt:$'+OON_Discount_Amount__c,'Discount Amt:N/A'),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON DA Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Discount_Amount_Customized__c</fullName>
        <formula>OON_Discount_Amount__c != OON_Discount_Amount_Default__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Discount Amount Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Discount_Amount_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Discount Amount Default</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Discount_Amount_Percent_Customized__c</fullName>
        <formula>OON_Discount_Amount_Percent__c != OON_Discount_Amount_Percent_Default__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON - Discount Amount Percent Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Discount_Amount_Percent_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Discount Amount Percent Default</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Discount_Amount_Percent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Discount Amount Percent</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Discount_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Additional Discount</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Discount_Applies_Customized__c</fullName>
        <formula>Text(OON_Discount_Applies__c ) != Text( OON_Discount_Applies_Default__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Discount Applies Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Discount_Applies_Default__c</fullName>
        <label>OON Discount Applies Default</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_Discount_Applies_Drawloop__c</fullName>
        <formula>IF(TEXT(OON_Copay_Type_1_IsCovered__c)='Yes',IF( Text(OON_Discount_Applies__c) !='','Discount Applies:'+Text(OON_Discount_Applies__c),'Discount Applies:N/A'),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Discount Applies Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Discount_Applies__c</fullName>
        <label>OON Discount Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_Discount_Percent_Drawloop__c</fullName>
        <formula>IF(TEXT(OON_Copay_Type_1_IsCovered__c)='Yes',IF( OON_Discount_Amount_Percent__c !='','Discount(%):'+OON_Discount_Amount_Percent__c+'%','Discount(%):N/A'),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Discount Percent Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_MaxPayment_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON MaxPayment High</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_MaxPayment_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON MaxPayment Increment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_MaxPayment_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON MaxPayment Low</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_MinPayment_Hiigh__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON MinPayment High</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_MinPayment_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON MinPayment Increment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_MinPayment_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON MinPayment Low</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_OutNetwok_Id__c</fullName>
        <formula>Grouper__r.OON_OutNetwork__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Netwok Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_SA_Drawloop__c</fullName>
        <formula>IF(TEXT(OON_Copay_Type_1_IsCovered__c)='Yes',Text(OON_ScheduledAmounts__c),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON SA Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_ScheduledAmounts_Customized__c</fullName>
        <formula>ON_Approximate_Member_Payment_w_Discount__c != ON_Approx_Member_Payment_w_Disc_Default__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON ScheduledAmounts Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_ScheduledAmounts_Default__c</fullName>
        <label>OON ScheduledAmounts Default</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_ScheduledAmounts__c</fullName>
        <description>OON Scheduled Amounts</description>
        <inlineHelpText>OON Scheduled Amounts</inlineHelpText>
        <label>ON Approximate Member Payment-w/Discount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_Tier_Type_Customized__c</fullName>
        <formula>text( OON_Tier_Type__c ) != text( OON_Tier_Type_Default__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Tier Type Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OON_Tier_Type_Default__c</fullName>
        <label>OON Tier Type Default</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OON_Tier_Type__c</fullName>
        <label>OON Tier Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Non-Preferred</fullName>
                </value>
                <value>
                    <fullName>Preferred Specialty</fullName>
                </value>
                <value>
                    <fullName>Non-Preferred Specialty</fullName>
                </value>
                <value>
                    <fullName>Self-Injectable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutNetwork_ExtID_Copay1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OutNetwork ExtID Copay1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutNetwork_ExtID_Copay2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OutNetwork ExtID Copay2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCS_Benefit_Id__c</fullName>
        <description>stores benefit id coming from PCS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PCS Benefit Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPName__c</fullName>
        <description>The name of the Proposed Product this benefit belongs to.</description>
        <formula>Grouper__r.Proposed_Products__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of the Proposed Product this benefit belongs to.</inlineHelpText>
        <label>PP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPid__c</fullName>
        <formula>CASESAFEID(Grouper__r.Proposed_Products__c)</formula>
        <label>PP id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Benefit_Name__c</fullName>
        <formula>TRIM(LEFT(Benefit_Name__c,(if( CONTAINS( Benefit_Name__c,' -') ,(FIND('-',Benefit_Name__c, 1)-1), if ( CONTAINS(Benefit_Name__c,'–'),(FIND('–',Benefit_Name__c, 1)-1), LEN( Benefit_Name__c)) ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Benefit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Benefit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent LimitBenefit</label>
        <referenceTo>AIA_Benefits__c</referenceTo>
        <relationshipLabel>Benefit</relationshipLabel>
        <relationshipName>Benefit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Mandate_Benefit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Mandate Benefit</label>
        <referenceTo>AIA_Benefits__c</referenceTo>
        <relationshipLabel>Benefit (Parent Mandate Benefit)</relationshipLabel>
        <relationshipName>BenefitMandate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Period Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_of_Service__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Place of Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>The product category</description>
        <formula>Grouper__r.Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The product category</inlineHelpText>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_ProductID__c</fullName>
        <formula>if( ISBLANK(Grouper__r.Benefit_Design_Product__c),CASESAFEID( Grouper__r.Proposed_Products__c ), CASESAFEID( Grouper__r.Benefit_Design_Product__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related PP/BDP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Facility Practitioner</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>PCP</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_PARENT_NAME__c</fullName>
        <description>old formula : CASE( TEXT(Benefit_Type__c) , 'Mandate',( IF(NOT( ISBLANK(Copay_Type_1_Mandate_Name__c )), Copay_Type_1_Mandate_Name__c, Benefit_Name__c ) + ' - '+ Text(Copay_Type_1_Jurisdiction__c) +' - Mandate' ), 'Limitation', (Benefit_Name__c +' - Limitation'),Benefit_Name__c )</description>
        <formula>CASE( TEXT(Benefit_Type__c) , 'Mandate',( IF(NOT( ISBLANK(Copay_Type_1_Mandate_Name__c )), Copay_Type_1_Mandate_Name__c, Benefit_Name__c ) + ' - '+ Text(Copay_Type_1_Jurisdiction__c) +' - Mandate' + ' ' +Text(Mandate_Yes_No__c) ), 'Limitation', (Benefit_Name__c +' - Limitation'),Benefit_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Benefit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledAmounts_Customized__c</fullName>
        <formula>IN_Approximate_Member_Payment_w_Discount__c!=IN_Approx_Member_Payment_w_Disc_Default__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Scheduled Amounts Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduledAmounts_Default__c</fullName>
        <label>INN Scheduled Amounts Default</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScheduledAmounts__c</fullName>
        <description>INN Scheduled Amounts</description>
        <inlineHelpText>INN Scheduled Amounts</inlineHelpText>
        <label>IN Approximate Member Payment-w/Discount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_Number_SF__c</fullName>
        <label>Sequence Number SF</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Three_Month_Deductible_Carryover__c</fullName>
        <label>Three Month Deductible Carryover</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_Type_Customized__c</fullName>
        <formula>text(Tier_type__c) !=  text(Tier_Type_Default__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier Type Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_Type_Default__c</fullName>
        <label>Tier Type Default</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Preferred Brand</fullName>
                </value>
                <value>
                    <fullName>Non-Preferred Brand</fullName>
                </value>
                <value>
                    <fullName>Preferred Specialty</fullName>
                </value>
                <value>
                    <fullName>Non-Preferred Specialty</fullName>
                </value>
                <value>
                    <fullName>Self-Injectable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_type__c</fullName>
        <label>Tier Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Preferred Brand</fullName>
                </value>
                <value>
                    <fullName>Non-Preferred Brand</fullName>
                </value>
                <value>
                    <fullName>Preferred Specialty</fullName>
                </value>
                <value>
                    <fullName>Non-Preferred Specialty</fullName>
                </value>
                <value>
                    <fullName>Self-Injectable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit</fullName>
                </value>
                <value>
                    <fullName>Cost Share</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variation_Condition_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Variation Condition ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variation_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Variation Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Benefit</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Benefit #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <recordTypes>
        <fullName>BD_Product</fullName>
        <active>true</active>
        <label>BD Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proposed_Product</fullName>
        <active>true</active>
        <label>Proposed Product</label>
    </recordTypes>
    <validationRules>
        <fullName>Cost_Share_Selected_Amount_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>Benefit__c == 'ABC'</errorConditionFormula>
        <errorMessage>Cost Selected field cannot be 1000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBEN001</fullName>
        <active>false</active>
        <errorConditionFormula>IF( Benefit_Name__c = 'Coinsurance' &amp;&amp; ISPICKVAL(Type__c,'Cost Share') &amp;&amp; (VALUE(Cost_Share_SelectedAmount__c) &gt; 100 || VALUE(OON_Cost_Share_SelectedAmount__c) &gt; 100),True,False)</errorConditionFormula>
        <errorMessage>EBEN001: Coinsurance value entered should be between 0 and 100'</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Minimum_Payment_Greater_than_Max_payment</fullName>
        <active>false</active>
        <errorConditionFormula>VALUE(Copay_Min_Payment__c)  &gt; VALUE(Copay_Max_Payment__c)</errorConditionFormula>
        <errorDisplayField>Copay_Max_Payment__c</errorDisplayField>
        <errorMessage>Minimum Payment cannot be greater than Maximum Payment</errorMessage>
    </validationRules>
</CustomObject>